# glcs

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  NEWS  README  README.md  TODO  build.sh  package.sh
cmake_modules/: FindELFHACKS.cmake  FindPACKETSTREAM.cmake
scripts/: CMakeLists.txt  capture.sh  inject.sh  pipe_ffmpeg.sh  webcam_overlay_mix_audio.sh
src/: CMakeLists.txt  capture.c  play.c
src/glc/: CMakeLists.txt
src/glc/capture/: alsa_capture.c  alsa_capture.h  alsa_hook.c  audio_capture.c  gl_capture.c
src/glc/common/: core.c  core.h  glc.h  log.c  log.h  optimization.h  rational.c  rational.h  signal.c  signal.h  state.c  state.h  thread.c  thread.h  util.c  util.h  version.h.in
src/glc/core/: color.c  copy.c  file.c  file.h  frame_writers.c  frame_writers.h  info.c  pack.c  pipe.c  pipe.h  rgb.c  scale.c  sink.h  source.h  tracker.c  ycbcr.c
src/glc/export/: img.c  wav.c  yuv4mpeg.c
src/glc/play/: alsa_play.c  demux.c  demux.h  gl_play.c
src/hook/: CMakeLists.txt  alsa.c  lib.h  main.c  opengl.c  x11.c
