SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules")


FIND_PACKAGE(PACKETSTREAM)
IF (PACKETSTREAM_FOUND)
    # TODO: Try to build local copy of library if no system version is found.
    INCLUDE_DIRECTORIES(${PACKETSTREAM_INCLUDE_DIR})
ENDIF (PACKETSTREAM_FOUND)


IF (UNIX)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -Wall")
    ADD_DEFINITIONS("-D_GNU_SOURCE")
    ADD_DEFINITIONS("-D_FILE_OFFSET_BITS=64")
ENDIF (UNIX)


IF (BINARIES)
    ADD_EXECUTABLE("capture" "capture.c")
    TARGET_LINK_LIBRARIES("capture" "dl" ${CMAKE_THREAD_LIBS_INIT})
    SET_TARGET_PROPERTIES("capture" PROPERTIES OUTPUT_NAME "glc-capture")

    ADD_EXECUTABLE("play" "play.c")
    TARGET_LINK_LIBRARIES("play" "glc-core" "glc-play" "glc-export"
                          ${PACKETSTREAM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
    SET_TARGET_PROPERTIES("play" PROPERTIES OUTPUT_NAME "glc-play")

    IF (UNIX)
        INSTALL(TARGETS "capture" "play" RUNTIME
                DESTINATION ${BINARY_INSTALL_DIR})
    ENDIF (UNIX)
ENDIF (BINARIES)


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_SUBDIRECTORY("glc")

IF (HOOK)
    ADD_SUBDIRECTORY("hook")
ENDIF (HOOK)
